# graphene

./: .gitignore  .gitmodules  CMakeLists.txt  DoxExternal  DoxInternal  Doxyfile  README.md  SConstruct  backendQt5.vcxproj  build.sh  buildDocs.sh  clean.sh  config.h.in  graphene.cpp  graphene.sln  graphene.vcxproj  graphene_lib.vcxproj
Algorithm/: Sets.inl  Strings.h  Strings.inl
Backends/Qt5/: Makefile  backendQt5.cpp  graphene_qt5.pro  graphene_qt5.vcxproj
Backends/Qt5/GUI/: Qt5AddVisDialog.cpp  Qt5AddVisDialog.h  Qt5Backend.cpp  Qt5Backend.h  Qt5GLWidget.cpp  Qt5GLWidget.h  Qt5Log.cpp  Qt5Log.h  Qt5LogDialog.cpp  Qt5LogDialog.h  Qt5ProgressBar.cpp  Qt5ProgressBar.h  Qt5ProgressBarHandle.cpp  Qt5ProgressBarHandle.h  Qt5ProgressBarPool.cpp  Qt5ProgressBarPool.h  Qt5ProgressBarPoolHandle.cpp  Qt5ProgressBarPoolHandle.h  Qt5Settings.cpp  Qt5Settings.h  Qt5Status.cpp  Qt5Status.h
Backends/Qt5/GUI/Mode/: Qt5Handle.cpp  Qt5Handle.h  Qt5ModeGroup.cpp  Qt5ModeGroup.h  Qt5Option.cpp  Qt5Option.h
Backends/Qt5/GUI/Property/: Qt5Bool.cpp  Qt5Bool.h  Qt5Button.cpp  Qt5Button.h  Qt5Choice.cpp  Qt5Choice.h  Qt5Color.cpp  Qt5Color.h  Qt5Container.cpp  Qt5Container.h  Qt5FactorySettings.cpp  Qt5FactorySettings.h  Qt5File.cpp  Qt5File.h  Qt5Files.cpp  Qt5Files.h  Qt5Folder.cpp  Qt5Folder.h  Qt5Group.cpp  Qt5Group.h  Qt5Number.cpp  Qt5Number.h  Qt5PropGroup.cpp  Qt5PropGroup.h  Qt5Range.cpp  Qt5Range.h  Qt5Section.cpp  Qt5Section.h  Qt5Separator.cpp  Qt5Separator.h  Qt5String.cpp  Qt5String.h  Qt5ToggleButton.cpp  Qt5ToggleButton.h  Qt5Tree.cpp  Qt5Tree.h  Qt5VisSettings.cpp  Qt5VisSettings.h
Cluster/: KmedoidMTCache.h
Cluster/test/: SConstruct
Eigen/: OpenGL.inl  Util  Util.inl
FW/: FWFactory.cpp  FWFactory.h  FWFactoryHandle.h  FWGBuffer.cpp  FWGBuffer.h  FWGraphene.cpp  FWGraphene.h  FWTask.cpp  FWTask.h  FWVisualizer.cpp  FWVisualizer.h  FWVisualizerHandle.cpp  FWVisualizerHandle.h  Factory.cpp  Factory.h  Graphene.cpp  Graphene.h  Visualizer.cpp  Visualizer.h  VisualizerHandle.h
FW/Events/: EventHandler.cpp  EventHandler.h  EventsEventHandler.cpp  EventsEventHandler.h  EventsHandle.h  EventsModifier.cpp  EventsSpaceNav.cpp  EventsSpaceNav.h  Handle.h  Handle.inl  Keys.h  Modifier.cpp  Modifier.h
FW/View/: Camera.cpp  Camera.h  CameraControl.cpp  CameraControl.h  FlyCameraControl.cpp  FlyCameraControl.h  OrbitCameraControl.cpp  OrbitCameraControl.h  Transforms.h  ViewCamera.cpp  ViewCamera.h  ViewCameraControl.cpp  ViewFlyCameraControl.cpp  ViewFlyCameraControl.h  ViewOrbitCameraControl.cpp  ViewOrbitCameraControl.h  ViewTransforms.h
GLSL/: gaussianH.frag  gaussianV.frag  hdrCompose.frag  hdrHiPass.frag  mesh.frag  normals.frag  points.frag  points.vert  pointsColor.frag  translatedPoints.vert  vectors.frag  vectors.geom  vectors.vert
GPU/: CublasDist.cpp  CublasMatrix.cpp  CublasOps.h
GUI/: Backend.cpp  Backend.h  GUIBackend.cpp  GUIBackend.h  GUIElement.cpp  GUIElement.h  GUIFactoryHandle.cpp  GUIFactoryHandle.h  GUILog.cpp  GUILog.h  GUIProgressBar.h  GUIProgressBar.inl  GUIProgressBarPool.h  GUIProgressBarPool.inl  GUIStatus.cpp  GUIStatus.h  GUIVisualizerHandle.cpp  GUIVisualizerHandle.h  Log.cpp  Status.cpp  Status.h
GUI/Mode/: Handle.cpp  Handle.h  ModeGroup.cpp  ModeGroup.h  ModeHandle.cpp  ModeHandle.h  ModeOption.cpp  ModeOption.h  Option.cpp  Option.h
GUI/Property/: Base.cpp  Base.h  Bool.cpp  Bool.h  Button.cpp  Button.h  Choice.cpp  Choice.h  Color.cpp  Color.h  Container.cpp  Container.h  File.cpp  File.h  Files.cpp  Files.h  Folder.cpp  Folder.h  Group.cpp  Group.h  Labeled.cpp  Labeled.h  Notify.h  Notify.inl  Number.cpp  Number.h  PropBase.cpp  PropBase.h  PropBool.cpp  PropBool.h  PropButton.cpp  PropButton.h  PropChoice.cpp  PropChoice.h  PropColor.cpp  PropColor.h  PropContainer.cpp  PropContainer.h  PropFile.cpp  PropFile.h  (+38 more)
Generic/: Command.h  FP.h  Indexed.h  MT.h  RandomAttributes.h  Range.h
Geometry/: BoundingBox.h  BoundingBox.inl  CloudAnalysis.h  CloudAnalysis.inl  MeshAnalysis.h  MeshAnalysis.inl  MeshTransform.h  OpenMeshTraits.h  Ray.h  SConstruct
Graph/: Algorithm.h  ComparableGraph.h  RCG.h  UndirectedGraph.cpp  UndirectedGraph.inl  makefile  matchGraphs.cpp
Graph/Algorithm/: RCGRandomWalkDistance.h  Sample.h  Sample.inl  Spectral.h  Traverse.h
IO/: Console.h  Log.h  ProgressBar.cpp  Types.cpp  Types.h  usage.txt
IR/: Class.h  Classification.h  Codebook.h  CudaCodebook.h
MT/: ListProcessor.h  Recurse.h  Recurse.inl
Math/: Vector.h  Vector.inl  Zero.inl
Math/Data/: Distance.h  DistanceMT.inl  EuclideanDistance.h  MatrixTools.h
OpenCL/: MatrixBuffer.inl
Optimization/: EigenFunctor.h  Munkres.h
PC/: PointCloud.cpp
Random/: RNG.h
StringUtils/: Slurp.h
Testing/: BaseException.h  Metric.h  Profiling.h  asserts.h  test.cpp
Vis/: Color.h  ColorConversion.h  ColorMap.h  Colors.h
cmake/modules/: FindHarmont.cmake  FindSpaceNav.cmake
include/: common.h  ogl.h  visualizer.h
skeleton/: SConstruct
